@@ -1,5 +1,6 @@
 Revision history for Module::Provision                           .
 
+          - CVE-2016-1238 adds inline sublass to Build.PL
           - Trace method will show selected env variables
           - Adds trace method to control environment variables
           - Boilerplate now also pattern matches hosts
